It prints X: to Glass!

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="TRIGGER_WORD">Start Black Box</string>
     <string name="read_aloud">Read Aloud</string>
     <string name="glass_voice_trigger">Human Black Box</string>
+    <string name="restart">Restart Services</string>
 
 </resources>
