--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="read_aloud">Read Aloud</string>
     <string name="glass_voice_trigger">Human Black Box</string>
     <string name="restart">Restart Services</string>
+    <string name="record_video">Record video</string>
 
 </resources>
