--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,10 +5,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="stop">Stop</string>
-    <string name="TRIGGER_WORD">Start Black Box</string>
     <string name="read_aloud">Read Aloud</string>
     <string name="glass_voice_trigger">Human Black Box</string>
-    <string name="restart">Restart Services</string>
     <string name="record_video">Record video</string>
+    <string name="send_location">Send location to circle</string>
 
 </resources>
