--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="glass_voice_trigger">Human Black Box</string>
     <string name="record_video">Record video</string>
     <string name="send_location">Send location to circle</string>
-    <string name="car_mode">Car Mode</string>
+    <string name="car_mode">Car mode</string>
 
 </resources>
