--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="read_aloud">Read Aloud</string>
     <string name="glass_voice_trigger">Human Black Box</string>
     <string name="record_video">Record video</string>
-    <string name="send_location">Send location to circle</string>
+    <string name="send_location">Send location</string>
     <string name="car_mode">Car mode</string>
     <string name="demo_mode">Demo mode</string>
 
