Using 3rd Party API to text. It returns success but it doesn't send

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="send_location">Send location</string>
     <string name="car_mode">Car mode</string>
     <string name="demo_mode">Demo mode</string>
+    <string name="my_name">Change my name</string>
 
 </resources>
